--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>CP-Library</h1>
+Normie's Competitive Programming Library
+This place is where I store templates for many different data structures and algorithms I used throughout my competitive programming career.
+
+There's still a lot of stuff to add, but you can already find some useful templates of DSAs here.
+
+I hope this helps people in their CP journey.
+
+(Note that I won't be around to update the library very often, since I'm still training for APIO and IOI.)
+
+Todo:
+Add basic stuff
+
+Add documentation. Some simpler DSAs haven't been documented.
