updated html FOR REAL

--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
-Normie's Competitive Programming Library
-This place is where I store templates for many different data structures and algorithms I used throughout my competitive programming career.
-
-There's still a lot of stuff to add, but you can already find some useful templates of DSAs here.
-
-I hope this helps people in their CP journey.
-
-(Note that I won't be around to update the library very often, since I'm still training for APIO and IOI.)
-
-Todo:
-Add basic stuff
-
-Add documentation. Some simpler DSAs haven't been documented.
+<h1 id="normie-s-competitive-programming-library">Normie&#39;s Competitive Programming Library</h1>
+<p>This place is where I store templates for many different data structures and algorithms I used throughout my competitive programming career.</p>
+<p>There&#39;s still a lot of stuff to add, but you can already find some useful templates of DSAs here.</p>
+<p>I hope this helps people in their CP journey.</p>
+<p>(Note that I won&#39;t be around to update the library very often, since I&#39;m still training for APIO and IOI.)</p>
+<h1 id="todo-">Todo:</h1>
+<p>Add basic stuff</p>
+<p>Add documentation. Some simpler DSAs haven&#39;t been documented.</p>
