--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<h1 id="normie-s-competitive-programming-library">Normie&#39;s Competitive Programming Library</h1>
+<img src="logo.png" alt="logo" title="oh wow cool logo" height=135 width=175>
+<h1 style="color:white;background-color: brown; text-align: center;" id="normie-s-competitive-programming-library">Normie&#39;s Competitive Programming Library</h1>
 <p>This place is where I store templates for many different data structures and algorithms I used throughout my competitive programming career.</p>
-<p>There&#39;s still a lot of stuff to add, but you can already find some useful templates of DSAs here.</p>
-<p>I hope this helps people in their CP journey.</p>
-<p>(Note that I won&#39;t be around to update the library very often, since I&#39;m still training for APIO and IOI.)</p>
-<h1 id="todo-">Todo:</h1>
-<p>Add basic stuff</p>
+<p>There&#39;s still a lot of stuff to add, but you can already find some useful templates of <abbr title="data structures and algorithms">DSAs</abbr> here.</p>
+<p>I hope this helps people in their <abbr title="competitive programming">CP</abbr> journey.</p>
+<h3 id="todo-">Todo:</h3>
+<p>Add basic stuff. For the time being, this library serves more to help me in my contests. I hope to improve it to make it more accessible for newcomers soon.</p>
 <p>Add documentation. Some simpler DSAs haven&#39;t been documented.</p>
+<p>Fix max segtree with search so that search operation is O(n*log<sub>2</sub>n).</p>
+<p>Test more operations of treap.</p>
