--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <p>This place is where I store templates for many different data structures and algorithms I used throughout my competitive programming career.</p>
 <p>There&#39;s still a lot of stuff to add, but you can already find some useful templates of <abbr title="data structures and algorithms">DSAs</abbr> here.</p>
 <p>I hope this helps people in their <abbr title="competitive programming">CP</abbr> journey.</p>
-<h2>Index:</h2>
+<h2>Index</h2>
 <ul>
     <li>
         Geometry
@@ -78,7 +78,6 @@
     <li>
         Query Data Structures
         <ul>
-            <li>
                 <li><a href="Query Data Structures/SegmentTree.cpp">Segment tree</a></li>
                 <li><a href="Query Data Structures/ImplicitSegmentTree.cpp">Implicit segment tree</a></li>
                 <li><a href="Query Data Structures/PersistentSegTree.cpp">Persistent segment tree</a></li>
@@ -88,14 +87,30 @@
                 <li><a href="Query Data Structures/STB_Add_Max_QMax.cpp">Segment tree beats (buggy)</a></li>
                 <li><a href="Query Data Structures/SimpleConvexHull.cpp">Simple convex hull</a></li>
                 <li><a href="Query Data Structures/Treap.cpp">Treap</a></li>
-            </li>
         </ul>
     </li>
     <li>
         Strings
+        <ul>
+                <li><a href="Strings/Hash.cpp">Hashing utilities</a></li>
+                <li><a href="Strings/KMP.cpp">KMP algorithm</a></li>
+                <li><a href="Strings/Z-Algorithm.cpp">Z function</a></li>
+                <li><a href="Strings/ManacherPalindrome.cpp">Manacher algorithm</a></li>
+                <li><a href="Strings/SuffixArray.cpp">Suffix array</a></li>
+                <li><a href="Strings/AhoCorasick.cpp">Aho-Corasick suffix automaton</a></li>
+        </ul>
     </li>
     <li>
-        Misc
+        Misc.
+        <ul>
+                <li><a href="Misc/MatrixExponentaion.cpp">Matrix multiplication + exponentation</a></li>
+                <li><a href="Misc/BitMatrixMultiplication.cpp">Bit matrix multiplication</a></li>
+                <li><a href="Misc/SlopeTrickBasic.cpp">Slope trick on 1 side</a></li>
+                <li><a href="Misc/SlopeTrick2Sides.cpp">Slope trick on 2 sides</a></li>
+                <li><a href="Misc/TwoSat.cpp">2-SAT solver</a></li>
+                <li><a href="Misc/GoldenSearch.cpp">Golden section search</a></li>
+                <li><a href="Misc/SimulatedAnnealing.cpp">Simulated annealing</a></li>
+        </ul>
     </li>
 </ul>
 <h3 id="todo-">Todo:</h3>
