Added Extended Euclidean algorithm and Chinese Remainder Theroem.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <li><a href="Math/PollardRhoFactorization.cpp">Pollard-rho factorization</a></li>
             <li><a href="Math/QuadraticResidue.cpp">Quadratic residue check</a></li>
             <li><a href="Math/SimpleBignum.cpp">Simple bignum implementation</a></li>
+            <li><a href="Math/ExtendedEuclid.cpp">Extended Euclidean algorithm + Chinese Remainder Theroem</a></li>
         </ul>
     </li>
     <li>
