--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<head>
+
+</head>
+<body>
 <img src="logo.png" alt="logo" title="oh wow cool logo" height=135 width=175>
 <h1 style="color:white;background-color: brown; text-align: center;" id="normie-s-competitive-programming-library">Normie&#39;s Competitive Programming Library</h1>
 <p>This place is where I store templates for many different data structures and algorithms I used throughout my competitive programming career.</p>
@@ -117,3 +122,4 @@
 <h3 id="todo-">Todo:</h3>
 <p>Add basic stuff. For the time being, this library serves more to help me in my contests. I hope to improve it to make it more accessible for newcomers soon.</p>
 <p>Add documentation. Some simpler DSAs haven&#39;t been documented.</p>
+</body>
